[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/sprites/shooter_traps/Sprites/Cannon/Cannon Fire/2.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/shooter_traps/Sprites/Cannon/Cannon Fire Effect/2.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/shooter_traps/Sprites/Cannon/Cannon Fire Effect/4.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/shooter_traps/Sprites/Cannon/Cannon Hit/1.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/shooter_traps/Sprites/Cannon/Cannon Fire Effect/3.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/shooter_traps/Sprites/Cannon/Cannon Fire/4.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/shooter_traps/Sprites/Cannon/Cannon Fire Effect/1.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/shooter_traps/Sprites/Cannon/Cannon Fire/1.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/shooter_traps/Sprites/Cannon/Cannon Fire Effect/6.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/shooter_traps/Sprites/Cannon/Cannon Fire Effect/5.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/shooter_traps/Sprites/Cannon/Cannon Fire/3.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/shooter_traps/Sprites/Cannon/Cannon Fire/6.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/shooter_traps/Sprites/Cannon/Cannon Idle/1.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/shooter_traps/Sprites/Cannon/Cannon Hit/2.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/shooter_traps/Sprites/Cannon/Cannon Fire/5.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/shooter_traps/Sprites/Cannon/Cannon Hit/3.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/shooter_traps/Sprites/Cannon/Cannon Hit/4.png" type="Texture" id=17]
[ext_resource path="res://niveles/nivel_7_enemigos_rango/enemy_canon.gd" type="Script" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": false,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "hit",
"speed": 10.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 1 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 15 ), ExtResource( 12 ) ],
"loop": true,
"name": "fire",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14, 12 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 10 ), ExtResource( 9 ), null ],
"loop": true,
"name": "fire",
"speed": 10.0
} ]

[node name="enemy_canon" type="RigidBody2D" groups=["entity"]]
collision_layer = 2
collision_mask = 2
mode = 2
gravity_scale = 2.0
linear_damp = 0.0
script = ExtResource( 18 )
knock_back_force = 35

[node name="AnimatedSprite_cannon" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Position2D" type="Position2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Position2D"]
position = Vector2( -14, 0 )
rotation = 1.57079

[node name="muzzle" type="Position2D" parent="Position2D"]
position = Vector2( -14, 0 )

[node name="AnimatedSprite_muzzle" type="AnimatedSprite" parent="Position2D/muzzle"]
position = Vector2( -6, 0 )
frames = SubResource( 2 )
animation = "idle"

[node name="Timer_queuefree" type="Timer" parent="."]

[connection signal="frame_changed" from="AnimatedSprite_cannon" to="." method="_on_AnimatedSprite_cannon_frame_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
